# mm-custom-acquisition

./: README.md  pyproject.toml  requirements.txt
acquisition/: __init__.py  autofocus.py  config.py  connect.py  logger.py  saving.py  stage.py
acquisition/imaging/: __init__.py  core_snap.py  engine.py
scripts/: run_coresnap.py  run_engine.py
